<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/search_layout_padding"
        tools:context=".search.SearchActivity">

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                           app:layout_constraintLeft_toLeftOf="parent"
                                                           app:layout_constraintRight_toRightOf="parent"
                                                           app:layout_constraintTop_toTopOf="parent"
                                                           android:layout_marginBottom="@dimen/_7dp_"
                                                           android:layout_marginLeft="@dimen/_7dp_"
                                                           android:id="@+id/queryTil"
                                                           android:layout_marginRight="@dimen/_7dp_"
                                                           android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:id="@+id/queryEt"
                                                                 android:hint="@string/search_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/queryTil"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:listitem="@layout/results_list_item"
            android:id="@+id/resultsRecyclerView"
            tools:itemCount="10"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            android:layout_height="0dp"/>

    <ProgressBar
            android:layout_width="@dimen/progress_bar_dimen"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_7dp_"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>